# OOP_hw5

./: CMakeLists.txt  Time.cpp  Time.hpp  main.cpp
tests/: CMakeLists.txt  TimeTest.cpp
